--- a/public/index.html
+++ b/public/index.html
@@ -81,22 +81,8 @@
                         <th>Data</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">23/01/2021</td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação de Website</td>
-                        <td class="icome">+ R$ 5.000,00</td>
-                        <td class="date">23/01/2021</td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 145,00</td>
-                        <td class="date">23/01/2021</td>
-                    </tr>
+                <tbody class="tbody-finance">
+                    
 
                 </tbody>
             </table>
